--- a/CSS folder/Past-Papers.Css
+++ b/CSS folder/Past-Papers.Css
@@ -1,34 +1,57 @@
 body {
-  margin: 10px;
-  background-color: rgb(248, 246, 243);
+  margin: 0px;
+  background-color:	#6de6c2);
 }
 
+.intro1{
+  margin: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  text-align: center;
+}
 .past-papers {
   border: 5cm;
-}
-
-h1,
-h3 {
-  text-align: center;
-  color: #9cf0e2;
 }
 
 h2 {
   text-align: center;
 }
 
+/* this is the styling for the main name of the website */
+.pacifico-regular {
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2rem;
+}
+
 .header {
-  border: 0cm;
+  border: 5cm;
   background-color: black;
   padding: 1rem;
   margin-right: 0px;
   margin-left: 0px;
 }
 
+
+.nav{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  border: 45%;
+  background-color: black;
+  color: aliceblue;
+}
+
+.nav-li{display: inline; right:75%;}
 .column {
   float: left;
   width: 50%;
 }
+.intro{ margin: 10px;}
 .row:after {
   display: table;
   clear: both;
@@ -41,4 +64,6 @@ h2 {
   border-radius: 4px;
   padding: 0.25rem;
   background-color: bisque;
+  text-align: end;
+  align-items: end;
 }
