--- a/CSS folder/Past-Papers.Css
+++ b/CSS folder/Past-Papers.Css
@@ -34,7 +34,7 @@ h2 {
 }
 
 
-.nav{
+.header{
   list-style: none;
   padding: 0;
   margin: 0;
@@ -46,7 +46,7 @@ h2 {
   color: aliceblue;
 }
 
-.nav-li{display: inline; right:75%;}
+.header-li{display: inline; right:75%;}
 .column {
   float: left;
   width: 50%;
