--- a/CSS folder/Privacy-Policy.css
+++ b/CSS folder/Privacy-Policy.css
@@ -55,13 +55,9 @@ body {
   border-bottom: 3px solid black; 
   margin-left: 0;
   margin-right: 0;}
-  
-  h4 {
-    font-size: 2rem;
-  }
-  h5 {
-    font-size: 1rem;
-  }
+
+
+  /*footer styling*/
   .footer {
     border: 0px solid black;
     background-color: rgb(192, 182, 182);
